Add airline in check in GUI